# ElectionGuard

./: CHANGELOG.md  ElectionGuard.cabal  LICENSE  README.md
app/: Main.hs
benchmark/: Main.hs
src/: Auxiliary.hs  Ballot.hs  BallotValidator.hs  ChaumPedersen.hs  DLog.hs  ElGamal.hs  Election.hs  ElectionGuard.hs  ElectionObjectBase.hs  ElectionPolynomial.hs  Group.hs  Hash.hs  JSONTypes.hs  Manifest.hs  Nonce.hs  Proof.hs  Schnorr.hs  TypeLevel.hs  Types.hs
src/ChaumPedersen/: Disj.hs
test/: Spec.hs
test/json/: invalid_randomized.json  invalid_three_different_broken_proofs.json  valid_encrypted.json
