cabal-version:       2.4
name:                ElectionGuard
version:             0.0.0.0
synopsis:            An implementation of Microsoft's ElectionGuard (v0.95) in Haskell
description:         An implementation of Microsoft's ElectionGuard (v0.95) in Haskell
homepage:            https://github.com/axman6/ElectionGuard
bug-reports:         https://github.com/axman6/ElectionGuard/issues
license:             MIT
license-file:        LICENSE
author:              Alex Mason
maintainer:          Alex Mason <github@me.axman6.com>
copyright:           2021 Alex Mason
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/axman6/ElectionGuard.git

common common-options
  build-depends:       base >= 4.13.0.0
                    ,  cryptonite
                    ,  formatting
                    ,  text
                    ,  bytestring
                    ,  MemoTrie
                    ,  aeson
                    ,  json-alt
                    ,  memory
                    ,  base16-bytestring
                    ,  QuickCheck

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  LambdaCase
                       ScopedTypeVariables
                       TypeApplications
                       ViewPatterns
                       BangPatterns
                       DuplicateRecordFields
                       DerivingStrategies
                       OverloadedStrings

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Group
                    ,  Types
                    ,  Auxiliary
                    ,  ElGamal
                    ,  ElectionGuard
                    ,  DLog
                    ,  Hash
                    ,  Election
                    ,  Proof
                    ,  Schnorr

executable ElectionGuard
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       ElectionGuard
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite ElectionGuard-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       ElectionGuard
                    ,  tasty
                    ,  tasty-hunit
                    ,  tasty-quickcheck
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark ElectionGuard-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , ElectionGuard
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
